bimg new targets

--- a/Dependencies/CMakeLists.txt
+++ b/Dependencies/CMakeLists.txt
@@ -119,17 +119,10 @@ elseif(GRAPHICS_API STREQUAL "OpenGL")
 elseif(GRAPHICS_API STREQUAL "Vulkan")
     target_compile_definitions(bgfx PRIVATE BGFX_CONFIG_RENDERER_VULKAN=1)
 endif()
-set_property(TARGET astc-encoder PROPERTY FOLDER Dependencies/bgfx/3rdparty)
-set_property(TARGET astc-encoder PROPERTY UNITY_BUILD false)
-set_property(TARGET edtaa3 PROPERTY FOLDER Dependencies/bgfx/3rdparty)
-set_property(TARGET etc1 PROPERTY FOLDER Dependencies/bgfx/3rdparty)
-set_property(TARGET etc2 PROPERTY FOLDER Dependencies/bgfx/3rdparty)
-set_property(TARGET iqa PROPERTY FOLDER Dependencies/bgfx/3rdparty)
-set_property(TARGET nvtt PROPERTY FOLDER Dependencies/bgfx/3rdparty)
-set_property(TARGET nvtt PROPERTY UNITY_BUILD false)
-set_property(TARGET pvrtc PROPERTY FOLDER Dependencies/bgfx/3rdparty)
-set_property(TARGET squish PROPERTY FOLDER Dependencies/bgfx/3rdparty)
-set_property(TARGET squish PROPERTY UNITY_BUILD false)
+set_property(TARGET bimg PROPERTY FOLDER Dependencies/bgfx/3rdparty)
+set_property(TARGET bimg PROPERTY UNITY_BUILD false)
+set_property(TARGET bimg_encode PROPERTY FOLDER Dependencies/bgfx/3rdparty)
+set_property(TARGET bimg_decode PROPERTY FOLDER Dependencies/bgfx/3rdparty)
 if(TARGET tinyexr)
     set_property(TARGET tinyexr PROPERTY FOLDER Dependencies/bgfx/3rdparty)
 endif()
