--- a/Dependencies/CMakeLists.txt
+++ b/Dependencies/CMakeLists.txt
@@ -122,7 +122,9 @@ endif()
 set_property(TARGET bimg PROPERTY FOLDER Dependencies/bgfx/3rdparty)
 set_property(TARGET bimg PROPERTY UNITY_BUILD false)
 set_property(TARGET bimg_encode PROPERTY FOLDER Dependencies/bgfx/3rdparty)
+set_property(TARGET bimg_encode PROPERTY UNITY_BUILD false)
 set_property(TARGET bimg_decode PROPERTY FOLDER Dependencies/bgfx/3rdparty)
+set_property(TARGET bimg_decode PROPERTY UNITY_BUILD false)
 if(TARGET tinyexr)
     set_property(TARGET tinyexr PROPERTY FOLDER Dependencies/bgfx/3rdparty)
 endif()
