--- a/.github/jobs/linux.yml
+++ b/.github/jobs/linux.yml
@@ -22,7 +22,7 @@ jobs:
 
     - script: |
         sudo apt-get update
-        sudo apt-get install libjavascriptcoregtk-4.0-dev libgl1-mesa-dev libcurl4-openssl-dev
+        sudo apt-get install libjavascriptcoregtk-4.0-dev libgl1-mesa-dev libcurl4-openssl-dev libwayland-dev
       displayName: 'Install packages'
 
     - script: |
