bin2c for shaders

--- a/Polyfills/Canvas/CMakeLists.txt
+++ b/Polyfills/Canvas/CMakeLists.txt
@@ -17,58 +17,56 @@ function(add_bgfx_shader FILE FOLDER)
 		set(OUTPUTS "")
 		set(OUTPUTS_PRETTY "")
 
-		if(WIN32)
-			# dx11
-			set(DX11_OUTPUT ${CMAKE_CURRENT_SOURCE_DIR}/Source/Shaders/dx11/${FILENAME}.bin)
-			if(NOT "${TYPE}" STREQUAL "COMPUTE")
-				_bgfx_shaderc_parse(
-					DX11 ${COMMON} WINDOWS
-					PROFILE s_5_0
-					O 3
-					OUTPUT ${DX11_OUTPUT}
-				)
-			else()
-				_bgfx_shaderc_parse(
-					DX11 ${COMMON} WINDOWS
-					PROFILE s_5_0
-					O 1
-					OUTPUT ${DX11_OUTPUT}
-				)
-			endif()
-			list(APPEND OUTPUTS "DX11")
-			set(OUTPUTS_PRETTY "${OUTPUTS_PRETTY}DX11, ")
+		# dx11
+		set(DX11_OUTPUT ${CMAKE_CURRENT_SOURCE_DIR}/Source/Shaders/dx11/${FILENAME}.h)
+		if(NOT "${TYPE}" STREQUAL "COMPUTE")
+			_bgfx_shaderc_parse(
+				DX11 ${COMMON} WINDOWS
+				PROFILE s_5_0
+				O 3
+				OUTPUT ${DX11_OUTPUT}
+                BIN2C "${FILENAME}_dx11"
+			)
+		else()
+			_bgfx_shaderc_parse(
+				DX11 ${COMMON} WINDOWS
+				PROFILE s_5_0
+				O 1
+				OUTPUT ${DX11_OUTPUT}
+                BIN2C "${FILENAME}_dx11"
+			)
 		endif()
+		list(APPEND OUTPUTS "DX11")
+		set(OUTPUTS_PRETTY "${OUTPUTS_PRETTY}DX11, ")
 
-		if(APPLE)
-			# metal
-			set(METAL_OUTPUT ${CMAKE_CURRENT_SOURCE_DIR}/Source/Shaders/metal/${FILENAME}.bin)
-			_bgfx_shaderc_parse(METAL ${COMMON} OSX PROFILE metal OUTPUT ${METAL_OUTPUT})
-			list(APPEND OUTPUTS "METAL")
-			set(OUTPUTS_PRETTY "${OUTPUTS_PRETTY}Metal, ")
-		endif()
+		# metal
+		set(METAL_OUTPUT ${CMAKE_CURRENT_SOURCE_DIR}/Source/Shaders/metal/${FILENAME}.h)
+		_bgfx_shaderc_parse(METAL ${COMMON} OSX PROFILE metal OUTPUT ${METAL_OUTPUT} BIN2C "${FILENAME}_mtl")
+		list(APPEND OUTPUTS "METAL")
+		set(OUTPUTS_PRETTY "${OUTPUTS_PRETTY}Metal, ")
 
 		# essl
 		if(NOT "${TYPE}" STREQUAL "COMPUTE")
-			set(ESSL_OUTPUT ${CMAKE_CURRENT_SOURCE_DIR}/Source/Shaders/essl/${FILENAME}.bin)
-			_bgfx_shaderc_parse(ESSL ${COMMON} ANDROID PROFILE 100_es OUTPUT ${ESSL_OUTPUT})
+			set(ESSL_OUTPUT ${CMAKE_CURRENT_SOURCE_DIR}/Source/Shaders/essl/${FILENAME}.h)
+			_bgfx_shaderc_parse(ESSL ${COMMON} ANDROID PROFILE 100_es OUTPUT ${ESSL_OUTPUT} BIN2C "${FILENAME}_essl")
 			list(APPEND OUTPUTS "ESSL")
 			set(OUTPUTS_PRETTY "${OUTPUTS_PRETTY}ESSL, ")
 		endif()
 
 		# glsl
-		set(GLSL_OUTPUT ${CMAKE_CURRENT_SOURCE_DIR}/Source/Shaders/glsl/${FILENAME}.bin)
+		set(GLSL_OUTPUT ${CMAKE_CURRENT_SOURCE_DIR}/Source/Shaders/glsl/${FILENAME}.h)
 		if(NOT "${TYPE}" STREQUAL "COMPUTE")
-			_bgfx_shaderc_parse(GLSL ${COMMON} LINUX PROFILE 140 OUTPUT ${GLSL_OUTPUT})
+			_bgfx_shaderc_parse(GLSL ${COMMON} LINUX PROFILE 140 OUTPUT ${GLSL_OUTPUT} BIN2C "${FILENAME}_glsl")
 		else()
-			_bgfx_shaderc_parse(GLSL ${COMMON} LINUX PROFILE 430 OUTPUT ${GLSL_OUTPUT})
+			_bgfx_shaderc_parse(GLSL ${COMMON} LINUX PROFILE 430 OUTPUT ${GLSL_OUTPUT} BIN2C "${FILENAME}_glsl")
 		endif()
 		list(APPEND OUTPUTS "GLSL")
 		set(OUTPUTS_PRETTY "${OUTPUTS_PRETTY}GLSL, ")
 
 		# spirv
 		if(NOT "${TYPE}" STREQUAL "COMPUTE")
-			set(SPIRV_OUTPUT ${CMAKE_CURRENT_SOURCE_DIR}/Source/Shaders/spirv/${FILENAME}.bin)
-			_bgfx_shaderc_parse(SPIRV ${COMMON} LINUX PROFILE spirv OUTPUT ${SPIRV_OUTPUT})
+			set(SPIRV_OUTPUT ${CMAKE_CURRENT_SOURCE_DIR}/Source/Shaders/spirv/${FILENAME}.h)
+			_bgfx_shaderc_parse(SPIRV ${COMMON} LINUX PROFILE spirv OUTPUT ${SPIRV_OUTPUT} BIN2C "${FILENAME}_spv")
 			list(APPEND OUTPUTS "SPIRV")
 			set(OUTPUTS_PRETTY "${OUTPUTS_PRETTY}SPIRV")
 			set(OUTPUT_FILES "")
