Nanovg shaders in canvas (#1472)
- needed for uwp : ~~https://github.com/bkaradzic/bimg/pull/92~~
(merged)
- update bimg, bx, bgfx
- upgrade to VS2022 for pragma intrinsics in bx
- replace bgfx.cmake fork with Branimir's fork. Files copy pasted into
babylon fork.
- Canvas will build nanovg shaders with shaderc (also built)
- check target glslang in dependencies to not have 2 targets with same
name (collision with bgfx 3rd party)
- target names changed (bimg_encode/decode vs nvtt ...)
- use static_assert instead of bx version
- added `libwayland-dev` Ubuntu build dep

Known limitation:
There is a discrepancy with glslang output library. **You can generate
shaders by building Canvas library but Shader tool needs to be disabled
to build UnitTest and Playground**. Best solution is to update glslang
dep. bgfx 3rd party glslang is more recent but doesn't contain
modification from our forks.

--- a/Dependencies/CMakeLists.txt
+++ b/Dependencies/CMakeLists.txt
@@ -52,24 +52,18 @@ elseif(GRAPHICS_API STREQUAL "OpenGL")
 elseif(GRAPHICS_API STREQUAL "Vulkan")
     target_compile_definitions(bgfx PRIVATE BGFX_CONFIG_RENDERER_VULKAN=1)
 endif()
-set_property(TARGET astc-encoder PROPERTY FOLDER Dependencies/bgfx/3rdparty)
-set_property(TARGET astc-encoder PROPERTY UNITY_BUILD false)
-set_property(TARGET edtaa3 PROPERTY FOLDER Dependencies/bgfx/3rdparty)
-set_property(TARGET etc1 PROPERTY FOLDER Dependencies/bgfx/3rdparty)
-set_property(TARGET etc2 PROPERTY FOLDER Dependencies/bgfx/3rdparty)
-set_property(TARGET iqa PROPERTY FOLDER Dependencies/bgfx/3rdparty)
-set_property(TARGET nvtt PROPERTY FOLDER Dependencies/bgfx/3rdparty)
-set_property(TARGET nvtt PROPERTY UNITY_BUILD false)
-set_property(TARGET pvrtc PROPERTY FOLDER Dependencies/bgfx/3rdparty)
-set_property(TARGET squish PROPERTY FOLDER Dependencies/bgfx/3rdparty)
-set_property(TARGET squish PROPERTY UNITY_BUILD false)
+set_property(TARGET bimg PROPERTY FOLDER Dependencies/bgfx/3rdparty)
+set_property(TARGET bimg PROPERTY UNITY_BUILD false)
+set_property(TARGET bimg_encode PROPERTY FOLDER Dependencies/bgfx/3rdparty)
+set_property(TARGET bimg_encode PROPERTY UNITY_BUILD false)
+set_property(TARGET bimg_decode PROPERTY FOLDER Dependencies/bgfx/3rdparty)
+set_property(TARGET bimg_decode PROPERTY UNITY_BUILD false)
 if(TARGET tinyexr)
     set_property(TARGET tinyexr PROPERTY FOLDER Dependencies/bgfx/3rdparty)
 endif()
 set_property(TARGET bgfx PROPERTY FOLDER Dependencies/bgfx)
 set_property(TARGET bimg PROPERTY FOLDER Dependencies/bgfx)
 set_property(TARGET bx PROPERTY FOLDER Dependencies/bgfx)
-
 target_compile_definitions(bx PRIVATE _CRT_SECURE_NO_WARNINGS)
 
 if(APPLE)
@@ -93,15 +87,18 @@ set(ENABLE_CTEST OFF CACHE BOOL "")
 set(SKIP_GLSLANG_INSTALL ON CACHE BOOL "")
 set(ENABLE_GLSLANG_WEBMIN ON CACHE BOOL "")
 set(ENABLE_GLSLANG_WEBMIN_DEVEL OFF CACHE BOOL "")
-FetchContent_MakeAvailable_With_Message(glslang)
 
-set_property(TARGET GenericCodeGen PROPERTY FOLDER Dependencies/glslang)
-set_property(TARGET glslang PROPERTY FOLDER Dependencies/glslang)
-set_property(TARGET glslang-default-resource-limits PROPERTY FOLDER Dependencies/glslang)
-set_property(TARGET OGLCompiler PROPERTY FOLDER Dependencies/glslang)
-set_property(TARGET OSDependent PROPERTY FOLDER Dependencies/glslang)
-set_property(TARGET MachineIndependent PROPERTY FOLDER Dependencies/glslang)
-set_property(TARGET SPIRV PROPERTY FOLDER Dependencies/glslang)
+if(NOT TARGET glslang)
+    FetchContent_MakeAvailable_With_Message(glslang)
+
+    set_property(TARGET GenericCodeGen PROPERTY FOLDER Dependencies/glslang)
+    set_property(TARGET glslang PROPERTY FOLDER Dependencies/glslang)
+    set_property(TARGET glslang-default-resource-limits PROPERTY FOLDER Dependencies/glslang)
+    set_property(TARGET OGLCompiler PROPERTY FOLDER Dependencies/glslang)
+    set_property(TARGET OSDependent PROPERTY FOLDER Dependencies/glslang)
+    set_property(TARGET MachineIndependent PROPERTY FOLDER Dependencies/glslang)
+    set_property(TARGET SPIRV PROPERTY FOLDER Dependencies/glslang)
+endif()
 
 # --------------------------------------------------
 # googletest
@@ -180,8 +177,12 @@ foreach(target spirv-cross-core spirv-cross-glsl spirv-cross-msl spirv-cross-hls
 endforeach()
 
 # seen with Sergio, disable warnings until unused parameter [-Wunused-parameter] get fixed. 
-disable_warnings(SPIRV)
-disable_warnings(MachineIndependent)
+if(TARGET SPIRV)
+    disable_warnings(SPIRV)
+endif()
+if(TARGET MachineIndependent)
+    disable_warnings(MachineIndependent)
+endif()
 
 # --------------------------------------------------
 # xr
