--- a/.github/jobs/test_install_linux.yml
+++ b/.github/jobs/test_install_linux.yml
@@ -7,7 +7,7 @@ parameters:
 
 jobs:
   - job: ${{ parameters.name }}
-    condition: and(succeeded(), eq(variables['Build.SourceBranch'], 'refs/heads/master'))
+    #condition: and(succeeded(), eq(variables['Build.SourceBranch'], 'refs/heads/master'))
     timeoutInMinutes: 30
     pool:
       vmImage: ${{ parameters.vmImage }}
@@ -23,7 +23,7 @@ jobs:
 
     - script: |
         sudo apt-get update
-        sudo apt-get install libjavascriptcoregtk-4.0-dev libgl1-mesa-dev libcurl4-openssl-dev
+        sudo apt-get install libjavascriptcoregtk-4.0-dev libgl1-mesa-dev libcurl4-openssl-dev libwayland-dev
       displayName: 'Install packages'
 
     - script: |
