--- a/.github/jobs/test_install_ios.yml
+++ b/.github/jobs/test_install_ios.yml
@@ -5,7 +5,7 @@ parameters:
 
 jobs:
   - job: ${{ parameters.name }}
-    condition: and(succeeded(), eq(variables['Build.SourceBranch'], 'refs/heads/master'))
+    #condition: and(succeeded(), eq(variables['Build.SourceBranch'], 'refs/heads/master'))
     timeoutInMinutes: 40
     pool:
       vmImage: ${{ parameters.vmImage }}
