Mocha&Chai update

--- a/Apps/UnitTests/CMakeLists.txt
+++ b/Apps/UnitTests/CMakeLists.txt
@@ -6,11 +6,13 @@ endif()
 set(SCRIPTS
     "Scripts/tests.js")
 
-set(EXTERNAL_SCRIPTS
+set(BABYLON_SCRIPTS
     "../node_modules/babylonjs/babylon.max.js"
-    "../node_modules/babylonjs-materials/babylonjs.materials.js"
-    "../node_modules/chai/chai.js"
-    "../node_modules/mocha/mocha.js")
+    "../node_modules/babylonjs-materials/babylonjs.materials.js")
+
+set(EXTERNAL_SCRIPTS
+    "../scripts/chai.js"
+    "../scripts/mocha.js")
 
 set(SOURCES
     "Shared/Shared.h"
@@ -26,7 +28,7 @@ elseif(WIN32)
     set(SOURCES ${SOURCES} "Win32/App.cpp")
 endif()
 
-add_executable(UnitTests ${SCRIPTS} ${EXTERNAL_SCRIPTS} ${SOURCES})
+add_executable(UnitTests ${SCRIPTS} ${EXTERNAL_SCRIPTS} ${BABYLON_SCRIPTS} ${SOURCES})
 set_property(TARGET UnitTests PROPERTY UNITY_BUILD false)
 
 target_link_libraries(UnitTests
@@ -49,7 +51,7 @@ add_test(NAME UnitTests COMMAND UnitTests)
 add_custom_command(TARGET UnitTests POST_BUILD
     COMMAND ${CMAKE_COMMAND} -E $<IF:$<BOOL:$<TARGET_RUNTIME_DLLS:UnitTests>>,copy,true> $<TARGET_RUNTIME_DLLS:UnitTests> $<TARGET_FILE_DIR:UnitTests> COMMAND_EXPAND_LISTS)
 
-foreach(SCRIPT ${SCRIPTS} ${EXTERNAL_SCRIPTS})
+foreach(SCRIPT ${SCRIPTS} ${EXTERNAL_SCRIPTS} ${BABYLON_SCRIPTS})
     get_filename_component(SCRIPT_NAME "${SCRIPT}" NAME)
     add_custom_command(
         OUTPUT "${CMAKE_CFG_INTDIR}/Scripts/${SCRIPT_NAME}"
@@ -60,4 +62,5 @@ endforeach()
 
 set_property(TARGET UnitTests PROPERTY FOLDER Apps)
 source_group(TREE ${CMAKE_CURRENT_SOURCE_DIR} FILES ${SOURCES} ${SCRIPTS})
-source_group(TREE ${CMAKE_CURRENT_SOURCE_DIR}/../node_modules PREFIX node_modules FILES ${EXTERNAL_SCRIPTS})
+source_group(TREE ${CMAKE_CURRENT_SOURCE_DIR}/../scripts PREFIX scripts FILES ${EXTERNAL_SCRIPTS})
+source_group(TREE ${CMAKE_CURRENT_SOURCE_DIR}/../node_modules PREFIX node_modules FILES ${BABYLON_SCRIPTS})
