--- a/Dependencies/CMakeLists.txt
+++ b/Dependencies/CMakeLists.txt
@@ -1,3 +1,5 @@
+set(CMAKE_POLICY_DEFAULT_CMP0077 NEW)
+
 # --------------------------------------------------
 # AndroidExtensions
 # --------------------------------------------------
