--- a/.github/jobs/test_install_ios.yml
+++ b/.github/jobs/test_install_ios.yml
@@ -5,7 +5,7 @@ parameters:
 
 jobs:
   - job: ${{ parameters.name }}
-    condition: and(succeeded(), eq(variables['Build.SourceBranch'], 'refs/heads/master'))
+    #condition: and(succeeded(), eq(variables['Build.SourceBranch'], 'refs/heads/master'))
     timeoutInMinutes: 40
     pool:
       vmImage: ${{ parameters.vmImage }}
@@ -26,11 +26,11 @@ jobs:
     - task: Xcode@5
       inputs:
         xcWorkspacePath: 'buildiOS/BabylonNative.xcodeproj'
-        scheme: 'Playground'
+        scheme: 'install'
         sdk: 'iphoneos'
         useXcpretty: false
         configuration: Release
-      displayName: 'Build Playground iOS'
+      displayName: 'Build install iOS'
 
     - script: |
         cmake --install buildiOS --prefix="$(Build.SourcesDirectory)/Install"
