--- a/.github/jobs/test_install_linux.yml
+++ b/.github/jobs/test_install_linux.yml
@@ -7,7 +7,7 @@ parameters:
 
 jobs:
   - job: ${{ parameters.name }}
-    # condition: and(succeeded(), eq(variables['Build.SourceBranch'], 'refs/heads/master'))
+    condition: and(succeeded(), eq(variables['Build.SourceBranch'], 'refs/heads/master'))
     timeoutInMinutes: 30
     pool:
       vmImage: ${{ parameters.vmImage }}
