Remove OpenXR dependencies (#1521)
The OpenXR dependency used by Windows builds needs to be updated to work
without errors when using CMake 4, but XR is not supported on Windows
anymore so there is no easy way to test the changes.

To fix this issue, this change removes XR support on Windows and removes
the OpenXR dependencies since they are only being used on Windows
(Android and iOS use different XR implementations).

--- a/Install/Test/CMakeLists.txt
+++ b/Install/Test/CMakeLists.txt
@@ -133,6 +133,10 @@ set(INSTALL_LIBS_DIR "${BINARY_DIR}/install/lib")
 target_include_directories(TestInstall PRIVATE "${BINARY_DIR}/install/include")
 target_link_directories(TestInstall PRIVATE ${INSTALL_LIBS_DIR} ${V8JSI_LIB_PATH_RELEASE})
 
+if(ANDROID OR IOS)
+    set(ADDITIONAL_LIBRARIES ${ADDITIONAL_LIBRARIES} NativeXr)
+endif()
+
 target_link_libraries(TestInstall
     AppRuntime
     arcana
@@ -163,9 +167,7 @@ target_link_libraries(TestInstall
     NativeInput
     NativeOptimizations
     NativeTracing
-    NativeXr
     OGLCompiler
-    openxr_loader
     OSDependent
     ScriptLoader
     Scheduling
