Enable NativeXR with UWP

--- a/Plugins/CMakeLists.txt
+++ b/Plugins/CMakeLists.txt
@@ -30,6 +30,6 @@ if(BABYLON_NATIVE_PLUGIN_TESTUTILS)
     add_subdirectory(TestUtils)
 endif()
 
-if(BABYLON_NATIVE_PLUGIN_NATIVEXR AND (ANDROID OR IOS))
+if(BABYLON_NATIVE_PLUGIN_NATIVEXR AND (ANDROID OR IOS OR WINDOWS_STORE))
     add_subdirectory(NativeXr)
 endif()
