Add HeadlessScreenshotApp example
This is an example from https://github.com/BabylonJS/BabylonNativeExamples. It is brought in here for easier testing on the CI.

--- a/Apps/CMakeLists.txt
+++ b/Apps/CMakeLists.txt
@@ -1,3 +1,7 @@
+if (WIN32 AND NOT WINDOWS_STORE)
+    add_subdirectory(HeadlessScreenshotApp)
+endif()
+
 if(NOT ANDROID)
     add_subdirectory(Playground)
 endif()
