Add StyleTransferApp example
This is an example from https://github.com/BabylonJS/BabylonNativeExamples. It is brought in here for easier testing on the CI.

--- a/Apps/CMakeLists.txt
+++ b/Apps/CMakeLists.txt
@@ -1,5 +1,6 @@
 if (WIN32 AND NOT WINDOWS_STORE)
     add_subdirectory(HeadlessScreenshotApp)
+    add_subdirectory(StyleTransferApp)
 endif()
 
 if(NOT ANDROID)
