--- a/Apps/HeadlessScreenshotApp/CMakeLists.txt
+++ b/Apps/HeadlessScreenshotApp/CMakeLists.txt
@@ -3,7 +3,12 @@ FetchContent_Declare(DirectXTK
     GIT_TAG e7d9b64ca6bb8977d4e3006727deaf57a7c1de84)
 
 FetchContent_MakeAvailable(CMakeExtensions)
+
+# DirectXTK does not compile with unity build turned on.
+set(PREV_CMAKE_UNITY_BUILD ${CMAKE_UNITY_BUILD})
+set(CMAKE_UNITY_BUILD OFF)
 FetchContent_MakeAvailable_With_Message(DirectXTK)
+set(CMAKE_UNITY_BUILD ${PREV_CMAKE_UNITY_BUILD})
 
 set(BABYLON_SCRIPTS
     "../node_modules/babylonjs/babylon.max.js"
