Only build example apps when graphics API is D3D11
DirectXTK only supports D3D11.

--- a/Apps/CMakeLists.txt
+++ b/Apps/CMakeLists.txt
@@ -1,4 +1,4 @@
-if (WIN32 AND NOT WINDOWS_STORE)
+if ((WIN32 AND NOT WINDOWS_STORE) AND GRAPHICS_API STREQUAL D3D11)
     add_subdirectory(HeadlessScreenshotApp)
     add_subdirectory(StyleTransferApp)
 endif()
