Use DirectXTK12 for HeadlessScreenshotApp example when graphics API is D3D12

--- a/Apps/CMakeLists.txt
+++ b/Apps/CMakeLists.txt
@@ -1,4 +1,4 @@
-if ((WIN32 AND NOT WINDOWS_STORE) AND GRAPHICS_API STREQUAL D3D11)
+if((WIN32 AND NOT WINDOWS_STORE) AND (GRAPHICS_API STREQUAL D3D11 OR GRAPHICS_API STREQUAL D3D12))
     add_subdirectory(HeadlessScreenshotApp)
 endif()
 
