Use correct DirectXTK lib name for D3D12

--- a/Apps/HeadlessScreenshotApp/CMakeLists.txt
+++ b/Apps/HeadlessScreenshotApp/CMakeLists.txt
@@ -2,10 +2,12 @@ if(GRAPHICS_API STREQUAL D3D11)
     FetchContent_Declare(DirectXTK
         GIT_REPOSITORY https://github.com/microsoft/DirectXTK.git
         GIT_TAG e7d9b64ca6bb8977d4e3006727deaf57a7c1de84)
+    set(DIRECTXTK_LIB DirectXTK)
 elseif(GRAPHICS_API STREQUAL D3D12)
     FetchContent_Declare(DirectXTK
         GIT_REPOSITORY https://github.com/microsoft/DirectXTK12.git
         GIT_TAG 873681e6110f1760c67a879bf15d44fe77edd4e5)
+    set(DIRECTXTK_LIB DirectXTK12)
 endif()
 
 FetchContent_MakeAvailable(CMakeExtensions)
@@ -35,9 +37,9 @@ target_compile_definitions(HeadlessScreenshotApp
     PRIVATE _UNICODE)
 
 target_link_libraries(HeadlessScreenshotApp
+    PRIVATE ${DIRECTXTK_LIB}
     PRIVATE AppRuntime
     PRIVATE Console
-    PRIVATE DirectXTK
     PRIVATE ExternalTexture
     PRIVATE NativeEngine
     PRIVATE ScriptLoader
